# ClariQ

./: .gitignore  LICENSE  NEO4J_SETUP_GUIDE.md  OCR_EXTRACTION_METHODS_KNOWLEDGE_BASE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_SETUP.md  PROJECT_PROGRESS.md  README.md  README_LANGGRAPH_ORCHESTRATION.md  README_RAG_SYSTEM.md  fast_pdf_to_markdown.py  pyproject.toml  test_final_system.py  test_graph_rag.py  test_neo4j_system.py
data/: README.md
db/: schema.sql
frontend/: README.md  config.js  demo.html  index.html  script.js  start.sh  styles.css
markdown_output/: GDPR.md  gdpr_summary.md  hipaa-simplification-201303.md  hipaa_summary.md
notebooks/: 1.0-data-loading.ipynb  2.0-nanonets-ocr-testing.ipynb
notebooks/.ipynb_checkpoints/: 2.0-nanonets-ocr-testing-checkpoint.ipynb
policy_corpus/output/CaliforniaConsumerPrivacyAct/: CaliforniaConsumerPrivacyAct_meta.json
policy_corpus/output/GDPR/: GDPR.md  GDPR_meta.json
policy_corpus/output/hipaa-simplification-201303/: hipaa-simplification-201303_meta.json
policy_corpus/raw/: CCPA.md  HIPAA.md
scripts/: build_rag_system.py  embed_policies.py  load_data.py  pdf_to_markdown.py  setup_neo4j_system.py  test_phase3_agents.py  test_phase4_langgraph.py
src/g_sia/agents/: neo4j_policy_agent.py  policy_agent.py  query_rewriter.py  sql_agent.py
src/g_sia/core/: agent_coordinator.py  content_aware_chunker.py  database.py  document_parser.py  graph_rag.py  neo4j_graph_rag.py  qdrant_vector_store.py
src/g_sia/graph/: langgraph_orchestrator.py  (+2 more)
src/rag/: chunking.py  chunks.json  langextract-chunking.ipynb
